2003-02-11  Riccardo Borghesi  <borghesi@livorno.ircam.fr>

	* add "Package Path" tab in Project Editor. User can now defines new package paths
	in addition to the defaults.

2003-02-07  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* 4.0.1 released

	* add "Open Configuration" menu implementation

	* add "Save As Default Configuration" menu implementation

	* remove preprocessor warning in audioconfig.c, sysinfo.c and adc_tilda.c
	
2003-02-07  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* cleaned exceptions report code in JMaxApplication.

	* added "New Configuration" menu implementation. Dirty code in ConfigurationEditor,
	makes FTS crash quite often. Note: it is currently not possible to "delete" an object from
	the client in a generic way, i.e. to close its editor and delete it in FTS.

2003-02-05  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* added debug code in Java client library. Debug code is activated by setting
	system property "ircam.fts.client.debug" to "true". This can be done by starting
	Java virtual machine with option -Dircam.fts.client.debug=true

	* added "Save As Default Project" implementation

	* changed fts_get_user_project to create the jMax user directory if it does not exist

2003-02-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* remove platform dependant default project files:
	   default_project_linux_alsa.jprj
	   default_project_linux_jack.jprj
	   default_project_linux_oss.jprj
	   default_project_macosx.jprj
	   default_project_win32.jrpj

	* hardcoded platform dependant packages in fts_platform_init

	* rename client_pipe_install into exported fts_client_pipe_start

	* rename client_tcp_manager_install into exported fts_client_tcp_start

	* move pipe connection test from fts_client_config (jmax/fts/client.c) to fts_init (jmax/fts/fts.c)

	* merge fts_kernel_init and fts_kernel_classes_config

	* add a null audio port that is always valid but never opened and that corresponds to the name "-"

	